# reflections

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  memory.example.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/camera-server/src/: env.d.ts  index.ts
apps/camera-server/src/server/: CameraApp.test.ts  CameraApp.ts
apps/camera-server/src/server/api/: README.md  health.test.ts  health.ts
apps/camera-server/src/server/manager/: AudioManager.ts  InputManager.ts  PhotoManager.ts  README.md
apps/camera-server/src/server/session/: README.md  User.ts
apps/viewer/: __init__.py  __main__.py  cli.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEMO_ASSETS.md  MODELS.md  PRIVACY.md  PROACTIVITY.md  SETUP.md
mediamtx/: mediamtx.yml
scripts/: capture_demo.ps1  capture_demo.sh  download_lora.ps1  download_lora.sh  pre_release_check.ps1  pre_release_check.sh  smoke_full_transcript.py  smoke_pipeline.py  smoke_server.py  verify_fresh_setup.ps1  verify_fresh_setup.sh
tests/: conftest.py  test_classifier.py  test_entities.py  test_env.py  test_parser.py  test_pipeline_dispatch.py  test_promptlog.py  test_render.py  test_suggestions.py
